styles.css
:root {
  --font-poppins: "Poppins", sans-serif;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: var(--font-poppins);
  margin: 0;
  font-size: 16px;
  background-color: #000;
}

/* ADDED HEIGHT FOR NAV BAR */
#hero-video {
  padding-top: 115px;
}

:focus-visible {
  outline: 3px solid #c00be0;
}

section > h2 {
  display: none;
}

/* PRIMARY CTA */
.primary-cta-container {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.primary-cta {
  text-decoration: unset;
  background-color: #9717ff;
  color: #fff;
  font-weight: 500;
  font-size: 1rem;
  text-transform: uppercase;
  display: block;
  border: unset;
  padding: 16px 73px;
  border-radius: 50px;
  cursor: pointer;
  text-align: center;
}

.primary-cta:hover {
  background-color: #7313c2;
}

/* SECTIONS */
#latest {
  padding-top: 170px;
}

#latest,
#video,
#merch,
#events,
#contact,
.mailing-list-section {
  padding-top: 170px;
}

#latest,
#video,
#events,
#contact,
.mailing-list-section {
  padding-left: 16px;
  padding-right: 16px;
}

/* SECTION TITLE */
.section-title {
  color: #ba7de3;
  font-size: 2rem;
  font-weight: 500;
  text-transform: uppercase;
  text-align: center;
  margin: unset;
}

/* SECTION SUBTITLE */
.section-subtitle {
  color: #fff;
  font-size: 2.75rem;
  font-weight: 500;
  text-transform: uppercase;
  text-align: center;
  margin: 0 0 75px 0;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 999;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  background: #000000;
  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 1) 70%,
    rgba(151, 23, 255, 1) 100%
  );
  padding: 17px 20px;
}

.nav-container > nav {
  display: flex;
}

.nav-container > nav > ul {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  list-style-type: unset;
  margin-block-end: unset;
  margin-block-start: unset;
  padding-inline-start: unset;
}

.nav-container > nav > ul > li {
  list-style: none;
  margin-right: 40px;
  display: block;
  text-align: unset;
}

.nav-container > nav > ul > li:last-child {
  margin-right: unset;
}

.nav-container > nav > ul > li:hover {
  opacity: 0.55;
  transition: all 0.3s ease;
}

.nav-container > nav > ul > li#sign-up-cta > a,
.nav-container > nav > ul > li#sign-up-cta > button {
  text-decoration: unset;
  background-color: #fff;
  color: #000;
  font-weight: 600;
  font-size: 1.15rem;
  text-transform: uppercase;
  display: block;
  border: unset;
  padding: 7px 30px;
  border-radius: 50px;
  cursor: pointer;
  /* transition: all 0.3s ease; */
}

.nav-container > nav > ul > li#sign-up-cta:hover {
  opacity: unset;
  transform: scale(0.95);
}

.nav-container > nav > ul > li > a {
  text-decoration: unset;
  color: #fff;
  font-weight: 500;
  font-size: 1.2rem;
  text-transform: uppercase;
  display: block;
}

.nav-logo h1 {
  display: none;
}

.nav-logo > svg {
  width: 95px;
}

.info-banner {
  background-color: #c00be0;
  padding: 0 16px;
}

.info-banner p {
  color: #fff;
  text-align: center;
  width: 100%;
  margin: 0;
  padding: 5px 0;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.875rem;
}

#hero-video .hero-video-container > video {
  width: 100%;
  height: calc(100vh - 115px);
  height: calc(100dvh - 115px);
  object-fit: cover;
}

.hero-video-container {
  position: relative;
}

.hero-video-container__logo {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  max-width: 750px;
  z-index: 9;
}

.hero-video-container__logo img {
  width: 100%;
  max-width: 750px;
  height: auto;
}

.hero-video-container__arrow {
  position: absolute;
  top: 95%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  max-width: 40px;
  max-height: 40px;
  z-index: 9;
}

.hero-video-container__arrow svg {
  width: 100%;
  height: 100%;
  fill: #fff;
}

.hero-video-container__arrow a {
  display: block;
  width: 100%;
  height: 100%;
  font-size: 0;
}

/* .hero-video-container__logo svg {
  width: 100%;
  fill: #ffffff !important;
  isolation: auto !important; 
  mix-blend-mode: normal !important;
} */

.latest-updates-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 38px;
  margin: 0 auto 75px auto;
  max-width: 1128px;
}

.latest-updates-container__item img {
  width: calc(100% - 4px);
  max-width: 545px;
  border: 2px solid #fff;
}

.latest-updates-container__item a {
  font-size: 0;
}

.yt-video-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  max-width: 1000px;
}

#video > .yt-video-container:nth-child(4) {
  margin-bottom: 165px;
}

#merch .primary-cta {
  margin: 0 16px;
}

.merch-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 0 75px 0;
  /* max-width: 1128px; */
}

.merch-container__inner-container {
  display: flex;
  overflow-y: hidden;
  overflow-x: auto;
  /* scroll-snap-type: x mandatory;
  -webkit-overflow-scrolling: touch; */
}

.merch-container a {
  display: block;
  width: 290px;
  /* scroll-snap-align: start; */
  margin: 3px 38px 3px 3px;
}

.merch-container a:last-child {
  margin-right: unset;
}

.merch-container .merch-item {
  width: 290px;
}

.merch-container .merch-item > img {
  border-radius: 15px;
  width: 290px;
}

.merch-container .merch-item > img:hover {
  opacity: 0.75;
  transition: all 0.3s ease;
}

.merch-container .merch-item > h5 {
  display: none;
}

.no-events-message {
  color: #fff;
  font-size: 1.5rem;
  font-weight: 400;
  text-align: center;
  margin: unset;
}

.contact-form-container form {
  max-width: 1128px;
  margin: 0 auto;
}

.contact-form-container form label {
  color: #fff;
  font-size: 1rem;
  font-weight: 500;
  text-transform: uppercase;
}

.contact-form-container form p {
  color: #fff;
  font-size: 1rem;
  font-weight: 400;
}

.contact-form-container form .form-group {
  display: flex;
  gap: 38px;
}

.contact-form-container form .form-row:nth-child(1) {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 40%;
}

.contact-form-container form .form-row:nth-child(2) {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 60%;
}

.form-input-container input {
  width: 100%;
  padding: 16px;
  border-radius: 8px;
  border: 1px solid #fff;
  background-color: transparent;
  color: #fff;
  font-size: 1rem;
  margin-top: 16px;
  margin-bottom: 30px;
  caret-color: #fff;
}

.form-input-container input::placeholder,
.form-message-container textarea::placeholder {
  font-size: 0.875rem;
  font-family: var(--font-poppins);
  color: #a5a5a5;
}

.form-message-container textarea {
  caret-color: #fff;
  font-family: var(--font-poppins);
  width: 100%;
  padding: 16px;
  border-radius: 8px;
  border: 1px solid #fff;
  min-height: 149px;
  background-color: transparent;
  color: #fff;
  font-size: 1rem;
  margin-top: 16px;
}

.form-privacy-policy {
  display: flex;
  align-items: center;
}

.form-privacy-policy input {
  width: 30px;
  height: 30px;
  margin-right: 16px;
  cursor: pointer;
  border: unset;
  background-color: #fff;
  accent-color: #c00be0;
  flex-shrink: 0;
}

.contact-form-container form button {
  font-family: var(--font-poppins);
}

footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 275px 16px 50px 16px;
  background: #000000;
  background: linear-gradient(
    180deg,
    rgba(0, 0, 0, 1) 50%,
    rgba(151, 23, 255, 1) 100%
  );
}

footer > img {
  width: 100%;
  max-width: 150px;
  margin-bottom: 20px;
  display: block;
}

footer > p {
  color: #fff;
  font-size: 1rem;
  font-weight: 500;
  text-transform: uppercase;
  text-align: center;
}

footer ul {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  margin: 0;
  list-style-type: unset;
  margin-block-end: unset;
  margin-block-start: unset;
  padding-inline-start: unset;
  width: 100%;
}

footer ul > li {
  list-style: none;
  display: block;
  text-align: unset;
}

footer ul > li > a {
  font-size: 0;
  display: block;
}

footer > svg {
  width: 135px;
  margin-bottom: 35px;
}

footer a > svg {
  width: 33px;
  height: 33px;
  margin: 0 10px;
}

footer svg > path {
  fill: #fff;
}

/* @media (max-width: 1000px) {
  nav ul li:not(#sign-up-cta) {
    display: none;
  }
} */
@media (max-width: 1340px) {
  .merch-container a {
    margin-right: 16px;
  }
  .merch-container a:last-child {
    margin-right: 32px;
  }
  .merch-container a:first-child {
    margin-left: 16px;
  }
}

@media (min-width: 992px) {
  .form-input-container:nth-child(3) input {
    margin-bottom: unset;
  }
}

@media (max-width: 992px) {
  .contact-form-container form .form-group {
    flex-direction: column;
  }
  #contact .contact-form-container form .form-row {
    width: 100%;
  }
  .contact-form-container form .form-group {
    gap: unset;
  }
  .form-message-container textarea {
    min-height: 300px;
  }
  .form-privacy-policy {
    margin-bottom: 16px;
  }
  /* .form-privacy-policy input {
    width: 75px;
    height: 75px;
  } */
}

@media (max-width: 875px) {
  nav ul li:not(#sign-up-cta) {
    display: none;
  }
  .nav-container > nav > ul > li#sign-up-cta > a,
  .nav-container > nav > ul > li#sign-up-cta > button {
    font-size: 1rem;
  }
}

@media (max-width: 719px) {
  /* SECTION TITLE */
  .section-title {
    font-size: 1.25rem;
  }

  /* SECTION SUBTITLE */
  .section-subtitle {
    font-size: 2rem;
  }
  #latest,
  #video,
  #merch,
  #events,
  #contact,
  .mailing-list-section {
    padding-top: 75px;
  }
  .section-subtitle,
  .latest-updates-container,
  .merch-container {
    margin-bottom: 50px;
  }
  #video > .yt-video-container:nth-child(4) {
    margin-bottom: 75px;
  }

  .hero-video-container__arrow {
    max-width: 30px;
    max-height: 30px;
  }

  .latest-updates-container {
    flex-direction: column;
  }
  .latest-updates-container__item:nth-child(1) {
    padding-bottom: 55px;
  }
  .latest-updates-container {
    gap: unset;
  }
  .no-events-message {
    font-size: 1.3rem;
  }
  .form-privacy-policy input {
    width: 35px;
    height: 35px;
  }
  footer {
    padding-top: 125px;
    background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 1) 30%,
      rgba(151, 23, 255, 1) 100%
    );
  }
}

@media (max-width: 425px) {
  .primary-cta {
    width: 100%;
  }
}

